--- a/src/Containers/App/App.module.css
+++ b/src/Containers/App/App.module.css
@@ -1,11 +1,7 @@
 .App {
   height: 100vmin;
   background: rgb(39, 39, 39);
-  background: linear-gradient(
-    90deg,
-    rgb(53, 85, 192) 0%,
-    rgb(141, 0, 206) 100%
-  );
+  background: linear-gradient(90deg, rgb(53, 85, 192) 0%, plum 100%);
   display: flex;
   flex-direction: column;
 }
@@ -44,6 +40,7 @@
 .showHTML {
   height: 100%;
   width: 100%;
+  border-radius: 5px;
   font-size: calc(10px + 1vmin);
   overflow-y: scroll;
 }
@@ -51,12 +48,12 @@
 .markdown {
   background-color: #f1f1f1;
   display: block;
-  outline-color: none;
+  outline: none;
   padding: 25px;
-  border-radius: 5px;
   border: 2px solid #f1f1f1;
   box-shadow: inset 0 0 25px #333;
   resize: none;
+  cursor: pointer;
 }
 
 .showHTML {
@@ -66,8 +63,25 @@
   border: 2px solid #f1f1f1;
 }
 
-h1 {
+h1, h2, h3 {
   color: plum;
+}
+.showHTML > h1 {
+  margin: 20px 0;
+  border-bottom: 2px solid plum;
+  text-decoration-skip-ink: auto;
+}
+.showHTML > h1:first-child {
+  margin-top: 0;
+}
+.showHTML > h2,
+.showHTML > h3 {
+  margin: 15px 0;
+}
+
+ul,
+ol {
+  margin: 20px 0 20px 50px;
 }
 
 p {
@@ -82,7 +96,11 @@ code {
   padding: 10px;
   margin: 10px 0;
   font-style: italic;
-  color: lightgoldenrodyellow;
+  color: lightgreen;
+}
+
+a {
+  color: rgb(255, 193, 112);
 }
 
 ::selection {
